added molecule integration and user ssh configuration

--- a/templates/sshconfig.j2
+++ b/templates/sshconfig.j2
@@ -1,5 +1,4 @@
-{% for host in sshuttle_hosts }}
-Host {{ host }}
-  User {{ sshuttle_user }}
-  Hostname {{ sshuttle_host_ip }}
-  ServerAliveInterval {{ server_alive_interval }}
+Host {{ remote_hostname }}
+  User {{ remote_username }}
+  Hostname {{ remote_ip }}
+  IdentityFile {{ private_key_path }}
